tests/expectations/compiler/records/global_shadow_records_fail.out
Error [EAST0372017]: The name `Token` is defined multiple times.
    --> compiler-test:7:12
     |
   3 |       record Token {
     |              ^^^^^ previous definition of `Token` here
   ...
   7 |       record Token {
     |              ^^^^^ `Token` redefined here
